also advance on click

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                  order()
          }, false);
 
+         document.addEventListener('click', (event) => {
+           order()
+         }, false);
+
         </script>
     </body>
 </html>
