--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                  order()
          }, false);
 
-         document.addEventListener('click', (event) => {
+         document.addEventListener('mousedown', (event) => {
            order()
          }, false);
 
